AER-3937 Generic code cleanup
Removed deprecated from old version as they are not technically deprecated, just older versions.